// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeRow renders correctly for all CodeRowStatus states 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F0F0F0",
      "borderColor": "#EDEEEF",
      "borderRadius": 3,
      "borderWidth": 1,
      "height": 50,
      "justifyContent": "center",
      "marginVertical": 5,
      "paddingHorizontal": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#81868B",
        "fontFamily": "Hind-Regular",
        "fontSize": 15,
        "lineHeight": 24,
      }
    }
  >
    placeholder
  </Text>
</View>
`;

exports[`CodeRow renders correctly for all CodeRowStatus states 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#FFF",
        "borderColor": "#EDEEEF",
        "borderRadius": 3,
        "borderWidth": 1,
        "flex": 0,
        "height": 50,
        "marginVertical": 5,
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    placeholder="placeholder"
    rejectResponderTermination={true}
    shouldShowClipboard={[MockFunction]}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EDEEEF",
        "borderRadius": 3,
        "flex": 1,
        "fontFamily": "Hind-Regular",
        "padding": 8,
      }
    }
    underlineColorAndroid="transparent"
    value="test"
  />
</View>
`;

exports[`CodeRow renders correctly for all CodeRowStatus states 3`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFF",
      "borderColor": "#EDEEEF",
      "borderRadius": 3,
      "borderWidth": 1,
      "height": 50,
      "justifyContent": "center",
      "marginVertical": 5,
      "paddingHorizontal": 10,
      "position": "relative",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#81868B",
        "fontFamily": "Hind-Regular",
        "fontSize": 15,
        "lineHeight": 24,
      }
    }
  >
    test...
  </Text>
  <ActivityIndicator
    animating={true}
    color="#42D689"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "backgroundColor": "#FFF",
        "padding": 10,
        "position": "absolute",
        "right": 3,
        "top": 5,
      }
    }
  />
</View>
`;

exports[`CodeRow renders correctly for all CodeRowStatus states 4`] = `
<View
  style={
    Object {
      "backgroundColor": "#F8F9F9",
      "borderRadius": 3,
      "height": 50,
      "justifyContent": "center",
      "marginVertical": 5,
      "paddingHorizontal": 10,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "color": "#81868B",
        "fontFamily": "Hind-Regular",
        "fontSize": 15,
        "lineHeight": 24,
      }
    }
  >
    test...
  </Text>
</View>
`;

exports[`CodeRow renders correctly for all CodeRowStatus states 5`] = `
<View
  style={
    Object {
      "backgroundColor": "#F8F9F9",
      "borderRadius": 3,
      "height": 50,
      "justifyContent": "center",
      "marginVertical": 5,
      "paddingHorizontal": 10,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "color": "#81868B",
        "fontFamily": "Hind-Regular",
        "fontSize": 15,
        "lineHeight": 24,
      }
    }
  >
    test...
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "#F8F9F9",
        "padding": 10,
        "position": "absolute",
        "right": 3,
        "top": 3,
      }
    }
  >
    <svg
      fill="none"
      height={20}
      style={Object {}}
      viewBox="0 0 32 32"
      width={20}
    >
      <path
        d="M8.414 15.086a2 2 0 10-2.828 2.828l2.828-2.828zM12.5 22l-1.414 1.414a2 2 0 002.8.029L12.5 22zm13.885-10.557a2 2 0 00-2.77-2.886l2.77 2.886zm-20.8 6.471l5.5 5.5 2.83-2.828-5.5-5.5-2.83 2.828zm8.3 5.529l12.5-12-2.77-2.886-12.5 12 2.77 2.886z"
        fill="#42D689"
        style={Object {}}
      />
    </svg>
  </View>
</View>
`;
